--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="I am Davi Souza Costa. A passionate Front end Developer with having experience in React, Redux, JavaScript, HTML, CSS, NodeJS, ExpressJS, MongoDB, and many more" />
-  <meta name="author" content="Davi Souza Costa (berthutapea)" />
+    content="I am Cristiano Silva. A passionate Front end Developer with having experience in React, Redux, JavaScript, HTML, CSS, NodeJS, ExpressJS, MongoDB, and many more" />
+  <meta name="author" content="Cristiano Silva (berthutapea)" />
   <meta name="keywords"
-    content="Davi Souza Costa, Front-end Developer in Indonesia, React Developer in Indonesia JavaScript Developer in Indoneisa, Web Developer in Indonesia, MERN-stack Developer in Indonesia, Graphic Designer, Sekolah Tinggi Teknologi Informatika Sony Sugema, Student of STTISS in Indonesia, Computer Engineer, Software Engineer">
+    content="Cristiano Silva, Front-end Developer in Indonesia, React Developer in Indonesia JavaScript Developer in Indoneisa, Web Developer in Indonesia, MERN-stack Developer in Indonesia, Graphic Designer, Sekolah Tinggi Teknologi Informatika Sony Sugema, Student of STTISS in Indonesia, Computer Engineer, Software Engineer">
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Davi Souza Costa| Portfolio</title>
+  <title>Cristiano Silva| Portfolio</title>
 
   <style>
     #loader-container {
